--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: #5f5f5f;
 }
 .header .logo{
   max-height: 32px;
@@ -13,6 +14,7 @@
 .header .title-group{
   padding-left: 25px;
 }
+
 .header .title-group i{
   padding-right: 5px;
 }
