--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a routerLink="/">
+    <a>
       <img class="logo" src="assets/img/logo.png" alt="logo">
     </a>
   </span>
   <span class="title-group">
-    <a>
+    <a routerLink="{{routeUrl}}">
       <i class="material-icons">
-        home
+        {{icon}}
       </i>
-      Início
+      {{title}}
     </a>
   </span>
 </mat-toolbar>
