--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,9 +4,18 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .red{
-  color: rgb(227, 94, 107);
+  color: #e35e6b;
 }
 
 .v-middle{
   vertical-align: middle;
+}
+
+.msg-success{
+  background-color: #28a745;
+  color: #fff;
+}
+.msg-error{
+  background-color: #e35e6b;
+  color: #fff;
 }
