--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -14,6 +14,12 @@
         </i>
         Produtos
       </a>
+      <a mat-list-item routerLink="/sale">
+        <i class="material-icons">
+          attach_money
+        </i>
+        Realizar Venda
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
