--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -19,6 +19,12 @@
       <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
     </ng-container>
 
+     <!-- Quantity Column -->
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef>Quantidade</th>
+        <td mat-cell *matCellDef="let row">{{row.quantity}}</td>
+    </ng-container>
+
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações Permitidas</th>
