--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -7,6 +7,9 @@
     <mat-form-field>
       <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
     </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Quantidade" [(ngModel)]="product.quantity" name="quantity">
+    </mat-form-field>
   </form>
   <button mat-raised-button (click)="updateProduct()" color="primary">
     Atualizar
